--- a/table/templates/dashboard/dashboard.html
+++ b/table/templates/dashboard/dashboard.html
@@ -21,7 +21,7 @@
 </style>
 <body>
     <div class="container">
-        <h1 class="title">Dashboard - Отчеты </h1>
+        <h1 class="title"><a href="/"> Dashboard - Отчеты</a></h1>
     </div>
     <div class="container">
         <h2 class="is-size-4 has-text-centered">Работодателей и резюме на HH, с охватом всех регионов РФ</h2>
