--- a/table/templates/table4.html
+++ b/table/templates/table4.html
@@ -3,7 +3,7 @@
     <table class="table is-striped">
       <thead>
         <tr>
-          <th>работодателей и резюме на HH, с охватом всех регионов РФ</th>
+          <th><a href="{% url 'dashboard' %}">работодателей и резюме на HH, с охватом всех регионов РФ</a></th>
           {% for date in hh_insights_by_date %}
             <th>{{ date }}</th>
           {% endfor %}
