--- a/table/templates/index.html
+++ b/table/templates/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Вакансии и движение сотрудников</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-</head>
-<style>
-    .container {
-        margin-top: 3rem;
-    }
-</style>
-<body>
+
+    <!-- myapp/templates/myapp/index.html -->
+{% extends "base.html" %}
+
+{% block title %}Вакансии и движение сотрудников{% endblock %}
+
+{% block content %}
     {% include 'table.html' %}
 
     {% include 'table2.html'  %}
@@ -18,6 +13,7 @@
     <div class="container">
         
     </div>
-</body>
-</html>
+{% endblock %}
+
+
 
