--- a/table/templates/base.html
+++ b/table/templates/base.html
@@ -26,6 +26,7 @@
             <div class="navbar-start">
                 <a class="navbar-item" href="/dashboard/">Dashboard</a>
                 <a class="navbar-item" href="/">Таблица</a>
+                <a class="navbar-item" href="/admin">Админ панель</a>
             </div>
         </div>
     </nav>
