--- a/table/templates/base.html
+++ b/table/templates/base.html
@@ -26,7 +26,7 @@
             <div class="navbar-start">
                 <a class="navbar-item" href="/dashboard/">Dashboard</a>
                 <a class="navbar-item" href="/">Таблица</a>
-                <a class="navbar-item" href="/admin/login">Админ панель</a>
+                <a class="navbar-item" target="_blank" href="/admin/login/">Админ панель</a>
             </div>
         </div>
     </nav>
